@@ -270,6 +270,16 @@ DECL|field|containerLaunchDuration
 name|MutableRate
 name|containerLaunchDuration
 decl_stmt|;
+DECL|field|allocatedMB
+specifier|private
+name|long
+name|allocatedMB
+decl_stmt|;
+DECL|field|availableMB
+specifier|private
+name|long
+name|availableMB
+decl_stmt|;
 DECL|method|create ()
 specifier|public
 specifier|static
@@ -429,28 +439,56 @@ operator|.
 name|incr
 argument_list|()
 expr_stmt|;
-name|allocatedGB
-operator|.
-name|incr
-argument_list|(
+name|allocatedMB
+operator|=
+name|allocatedMB
+operator|+
 name|res
 operator|.
 name|getMemory
 argument_list|()
+expr_stmt|;
+name|allocatedGB
+operator|.
+name|set
+argument_list|(
+operator|(
+name|int
+operator|)
+name|Math
+operator|.
+name|ceil
+argument_list|(
+name|allocatedMB
 operator|/
-literal|1024
+literal|1024d
 argument_list|)
+argument_list|)
+expr_stmt|;
+name|availableMB
+operator|=
+name|availableMB
+operator|-
+name|res
+operator|.
+name|getMemory
+argument_list|()
 expr_stmt|;
 name|availableGB
 operator|.
-name|decr
+name|set
 argument_list|(
-name|res
+operator|(
+name|int
+operator|)
+name|Math
 operator|.
-name|getMemory
-argument_list|()
+name|floor
+argument_list|(
+name|availableMB
 operator|/
-literal|1024
+literal|1024d
+argument_list|)
 argument_list|)
 expr_stmt|;
 name|allocatedVCores
@@ -488,28 +526,56 @@ operator|.
 name|decr
 argument_list|()
 expr_stmt|;
-name|allocatedGB
-operator|.
-name|decr
-argument_list|(
+name|allocatedMB
+operator|=
+name|allocatedMB
+operator|-
 name|res
 operator|.
 name|getMemory
 argument_list|()
+expr_stmt|;
+name|allocatedGB
+operator|.
+name|set
+argument_list|(
+operator|(
+name|int
+operator|)
+name|Math
+operator|.
+name|ceil
+argument_list|(
+name|allocatedMB
 operator|/
-literal|1024
+literal|1024d
 argument_list|)
+argument_list|)
+expr_stmt|;
+name|availableMB
+operator|=
+name|availableMB
+operator|+
+name|res
+operator|.
+name|getMemory
+argument_list|()
 expr_stmt|;
 name|availableGB
 operator|.
-name|incr
+name|set
 argument_list|(
-name|res
+operator|(
+name|int
+operator|)
+name|Math
 operator|.
-name|getMemory
-argument_list|()
+name|floor
+argument_list|(
+name|availableMB
 operator|/
-literal|1024
+literal|1024d
+argument_list|)
 argument_list|)
 expr_stmt|;
 name|allocatedVCores
@@ -542,16 +608,30 @@ name|Resource
 name|res
 parameter_list|)
 block|{
-name|availableGB
-operator|.
-name|incr
-argument_list|(
+name|availableMB
+operator|=
+name|availableMB
+operator|+
 name|res
 operator|.
 name|getMemory
 argument_list|()
+expr_stmt|;
+name|availableGB
+operator|.
+name|incr
+argument_list|(
+operator|(
+name|int
+operator|)
+name|Math
+operator|.
+name|floor
+argument_list|(
+name|availableMB
 operator|/
-literal|1024
+literal|1024d
+argument_list|)
 argument_list|)
 expr_stmt|;
 name|availableVCores
